[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-autorca-platform"
version = "0.1.0"
description = "Metadata-driven AI AutoRCA Airflow platform scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "AI AutoRCA Platform Team" }
]
dependencies = [
  "pydantic>=2.0,<3.0",
]

[project.scripts]
autorca-metadata = "autorca_platform.cli.compile_metadata:main"

[project.optional-dependencies]
dev = [
  "black>=24.0,<25.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
